feat: add projects and att images

--- a/index.html
+++ b/index.html
@@ -300,17 +300,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projeto 2</h2>
+            <h2 class="experience-sub-title project-title">Calculadora de IMC</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/wesllenfe/imc-calculator', '_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://wesllenfe.github.io/imc-calculator/', '_blank')"
               >
               Demonstração 
               </button>
@@ -324,17 +324,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projeto 3</h2>
+            <h2 class="experience-sub-title project-title">To-do</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/wesllenfe/to-do'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://wesllenfe.github.io/to-do/', '_blank')"
               >
               Demonstração 
               </button>
