--- a/index.html
+++ b/index.html
@@ -369,6 +369,14 @@
           />
           <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
         </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/whatsapp.png"
+            alt="Whatsapp icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://api.whatsapp.com/send? phone=5549992014663&text=Olá%20Wesllen,%20vim%20pelo%20seu%20portfólio!" target="_blank">Whatsapp</a></p>
+        </div>
       </div>
     </section>
     <footer>
