feat: add link in name and att picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Wesllen Felipe</div>
+      <div class="logo" id="logo">Wesllen Felipe</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">Sobre</a></li>
