--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="about-containers">
           <div class="details-container">
             <h2 class="experience-sub-title">Desenvolvimento Frontend</h2>
-            <div class="article-container">
+            <div class="article-container experience">
               <article>
                 <img
                   src="./assets/checkmark.png"
