feat: lining up projects section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </div>
           <div class="details-container">
             <h2 class="experience-sub-title">Desenvolvimento Backend</h2>
-            <div class="article-container">
+            <div class="article-container experience">
               <article>
                 <img
                   src="./assets/checkmark.png"
