feat: add linkedin e whats btns

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/wesllen-felipe-langaro-raiser-da-cruz-31b9ab210/" target="_blank">LinkedIn</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -375,7 +375,7 @@
             alt="Whatsapp icon"
             class="icon contact-icon"
           />
-          <p><a href="https://api.whatsapp.com/send? phone=5549992014663&text=Olá%20Wesllen,%20vim%20pelo%20seu%20portfólio!" target="_blank">Whatsapp</a></p>
+          <p><a href="https://api.whatsapp.com/send?phone=+5549992014663&text=Olá%20Wesllen,%20vim%20pelo%20seu%20portfólio!" target="_blank">Whatsapp</a></p>
         </div>
       </div>
     </section>
