feat: att project 2

--- a/index.html
+++ b/index.html
@@ -300,17 +300,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Calculadora de IMC</h2>
+            <h2 class="experience-sub-title project-title">Academia</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/wesllenfe/imc-calculator', '_blank')"
+                onclick="window.open('https://github.com/wesllenfe/Academia', '_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://wesllenfe.github.io/imc-calculator/', '_blank')"
+                onclick="window.open('https://wesllenfe.github.io/Academia/', '_blank')"
               >
               Demonstração 
               </button>
