feat: add calculator project

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       <h1 class="title">Projetos</h1>
       <div class="experience-details-container">
         <div class="about-containers">
+          
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -276,17 +277,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Jogo da memória</h2>
+            <h2 class="experience-sub-title project-title">Calculadora:</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/wesllenfe/memory-game', '_blank')"
+                onclick="window.open('https://github.com/wesllenfe/calculator-dl', '_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://wesllenfe.github.io/memory-game/', '_blank')"
+                onclick="window.open('https://wesllenfe.github.io/calculator-dl/', '_blank')"
               >
                 Demonstração
               </button>
