feat: add new project

--- a/index.html
+++ b/index.html
@@ -325,17 +325,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">To-do</h2>
+            <h2 class="experience-sub-title project-title">Ecommerce</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/wesllenfe/to-do'"
+                onclick="location.href='https://github.com/wesllenfe/ecommerce-project'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://wesllenfe.github.io/to-do/', '_blank')"
+                onclick="window.open('https://wesllenfe.github.io/ecommerce-project/', '_blank')"
               >
               Demonstração 
               </button>
